Fixed the annoying listview overlap problem.

--- a/assets/www/stylesheets/event-info.css
+++ b/assets/www/stylesheets/event-info.css
@@ -5,3 +5,7 @@
 #delete {
   visibility: hidden;
 }
+
+.val {
+  float: right;
+}
